src/grammar/DataFlowParser.py
# Generated from grammar/DataFlow.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DataFlowParser ( Parser ):

    grammarFileName = "DataFlow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'carregar'", "'filtrar'", "'agrupar'", 
                     "'por'", "'agregar'", "'de'", "'como'", "'ordenar'", 
                     "'selecionar'", "'transformar'", "'='", "'mostrar'", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'soma'", "'media'", 
                     "'contagem'", "'minimo'", "'maximo'", "'tabela'", "'grafico'", 
                     "'asc'", "'desc'", "','", "'('", "')'", "'+'", "'-'", 
                     "'*'", "'/'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFICADOR", "STRING", 
                      "NUMERO", "BOOLEANO", "PONTO_VIRGULA", "ESPACO", "COMENTARIO" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_comandoCarregar = 2
    RULE_comandoFiltrar = 3
    RULE_comandoAgrupar = 4
    RULE_comandoAgregar = 5
    RULE_comandoOrdenar = 6
    RULE_comandoSelecionar = 7
    RULE_comandoTransformar = 8
    RULE_comandoMostrar = 9
    RULE_condicao = 10
    RULE_operador = 11
    RULE_valor = 12
    RULE_funcaoAgregacao = 13
    RULE_formatoSaida = 14
    RULE_direcaoOrdenacao = 15
    RULE_listaColunas = 16
    RULE_expressao = 17
    RULE_operadorAritmetico = 18

    ruleNames =  [ "programa", "comando", "comandoCarregar", "comandoFiltrar", 
                   "comandoAgrupar", "comandoAgregar", "comandoOrdenar", 
                   "comandoSelecionar", "comandoTransformar", "comandoMostrar", 
                   "condicao", "operador", "valor", "funcaoAgregacao", "formatoSaida", 
                   "direcaoOrdenacao", "listaColunas", "expressao", "operadorAritmetico" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    IDENTIFICADOR=34
    STRING=35
    NUMERO=36
    BOOLEANO=37
    PONTO_VIRGULA=38
    ESPACO=39
    COMENTARIO=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DataFlowParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataFlowParser.ComandoContext)
            else:
                return self.getTypedRuleContext(DataFlowParser.ComandoContext,i)


        def getRuleIndex(self):
            return DataFlowParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = DataFlowParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.comando()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 5934) != 0)):
                    break

            self.state = 43
            self.match(DataFlowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandoCarregar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoCarregarContext,0)


        def comandoFiltrar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoFiltrarContext,0)


        def comandoAgrupar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoAgruparContext,0)


        def comandoAgregar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoAgregarContext,0)


        def comandoOrdenar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoOrdenarContext,0)


        def comandoSelecionar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoSelecionarContext,0)


        def comandoTransformar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoTransformarContext,0)


        def comandoMostrar(self):
            return self.getTypedRuleContext(DataFlowParser.ComandoMostrarContext,0)


        def getRuleIndex(self):
            return DataFlowParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = DataFlowParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.comandoCarregar()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.comandoFiltrar()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.comandoAgrupar()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.comandoAgregar()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.comandoOrdenar()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.comandoSelecionar()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.comandoTransformar()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 8)
                self.state = 52
                self.comandoMostrar()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoCarregarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DataFlowParser.STRING, 0)

        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoCarregar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoCarregar" ):
                listener.enterComandoCarregar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoCarregar" ):
                listener.exitComandoCarregar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoCarregar" ):
                return visitor.visitComandoCarregar(self)
            else:
                return visitor.visitChildren(self)




    def comandoCarregar(self):

        localctx = DataFlowParser.ComandoCarregarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comandoCarregar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(DataFlowParser.T__0)
            self.state = 56
            self.match(DataFlowParser.STRING)
            self.state = 57
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoFiltrarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicao(self):
            return self.getTypedRuleContext(DataFlowParser.CondicaoContext,0)


        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoFiltrar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoFiltrar" ):
                listener.enterComandoFiltrar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoFiltrar" ):
                listener.exitComandoFiltrar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoFiltrar" ):
                return visitor.visitComandoFiltrar(self)
            else:
                return visitor.visitChildren(self)




    def comandoFiltrar(self):

        localctx = DataFlowParser.ComandoFiltrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comandoFiltrar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(DataFlowParser.T__1)
            self.state = 60
            self.condicao()
            self.state = 61
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoAgruparContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(DataFlowParser.IDENTIFICADOR, 0)

        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoAgrupar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoAgrupar" ):
                listener.enterComandoAgrupar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoAgrupar" ):
                listener.exitComandoAgrupar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoAgrupar" ):
                return visitor.visitComandoAgrupar(self)
            else:
                return visitor.visitChildren(self)




    def comandoAgrupar(self):

        localctx = DataFlowParser.ComandoAgruparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comandoAgrupar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(DataFlowParser.T__2)
            self.state = 64
            self.match(DataFlowParser.T__3)
            self.state = 65
            self.match(DataFlowParser.IDENTIFICADOR)
            self.state = 66
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoAgregarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcaoAgregacao(self):
            return self.getTypedRuleContext(DataFlowParser.FuncaoAgregacaoContext,0)


        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(DataFlowParser.IDENTIFICADOR)
            else:
                return self.getToken(DataFlowParser.IDENTIFICADOR, i)

        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoAgregar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoAgregar" ):
                listener.enterComandoAgregar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoAgregar" ):
                listener.exitComandoAgregar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoAgregar" ):
                return visitor.visitComandoAgregar(self)
            else:
                return visitor.visitChildren(self)




    def comandoAgregar(self):

        localctx = DataFlowParser.ComandoAgregarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comandoAgregar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(DataFlowParser.T__4)
            self.state = 69
            self.funcaoAgregacao()
            self.state = 70
            self.match(DataFlowParser.T__5)
            self.state = 71
            self.match(DataFlowParser.IDENTIFICADOR)
            self.state = 72
            self.match(DataFlowParser.T__6)
            self.state = 73
            self.match(DataFlowParser.IDENTIFICADOR)
            self.state = 74
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoOrdenarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(DataFlowParser.IDENTIFICADOR, 0)

        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def direcaoOrdenacao(self):
            return self.getTypedRuleContext(DataFlowParser.DirecaoOrdenacaoContext,0)


        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoOrdenar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoOrdenar" ):
                listener.enterComandoOrdenar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoOrdenar" ):
                listener.exitComandoOrdenar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoOrdenar" ):
                return visitor.visitComandoOrdenar(self)
            else:
                return visitor.visitChildren(self)




    def comandoOrdenar(self):

        localctx = DataFlowParser.ComandoOrdenarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comandoOrdenar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(DataFlowParser.T__7)
            self.state = 77
            self.match(DataFlowParser.T__3)
            self.state = 78
            self.match(DataFlowParser.IDENTIFICADOR)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25 or _la==26:
                self.state = 79
                self.direcaoOrdenacao()


            self.state = 82
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoSelecionarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaColunas(self):
            return self.getTypedRuleContext(DataFlowParser.ListaColunasContext,0)


        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoSelecionar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoSelecionar" ):
                listener.enterComandoSelecionar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoSelecionar" ):
                listener.exitComandoSelecionar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoSelecionar" ):
                return visitor.visitComandoSelecionar(self)
            else:
                return visitor.visitChildren(self)




    def comandoSelecionar(self):

        localctx = DataFlowParser.ComandoSelecionarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comandoSelecionar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(DataFlowParser.T__8)
            self.state = 85
            self.listaColunas()
            self.state = 86
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoTransformarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(DataFlowParser.IDENTIFICADOR, 0)

        def expressao(self):
            return self.getTypedRuleContext(DataFlowParser.ExpressaoContext,0)


        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoTransformar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoTransformar" ):
                listener.enterComandoTransformar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoTransformar" ):
                listener.exitComandoTransformar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoTransformar" ):
                return visitor.visitComandoTransformar(self)
            else:
                return visitor.visitChildren(self)




    def comandoTransformar(self):

        localctx = DataFlowParser.ComandoTransformarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comandoTransformar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(DataFlowParser.T__9)
            self.state = 89
            self.match(DataFlowParser.IDENTIFICADOR)
            self.state = 90
            self.match(DataFlowParser.T__10)
            self.state = 91
            self.expressao(0)
            self.state = 92
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoMostrarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formatoSaida(self):
            return self.getTypedRuleContext(DataFlowParser.FormatoSaidaContext,0)


        def PONTO_VIRGULA(self):
            return self.getToken(DataFlowParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_comandoMostrar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoMostrar" ):
                listener.enterComandoMostrar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoMostrar" ):
                listener.exitComandoMostrar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoMostrar" ):
                return visitor.visitComandoMostrar(self)
            else:
                return visitor.visitChildren(self)




    def comandoMostrar(self):

        localctx = DataFlowParser.ComandoMostrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comandoMostrar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(DataFlowParser.T__11)
            self.state = 95
            self.formatoSaida()
            self.state = 96
            self.match(DataFlowParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(DataFlowParser.IDENTIFICADOR, 0)

        def operador(self):
            return self.getTypedRuleContext(DataFlowParser.OperadorContext,0)


        def valor(self):
            return self.getTypedRuleContext(DataFlowParser.ValorContext,0)


        def getRuleIndex(self):
            return DataFlowParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicao" ):
                return visitor.visitCondicao(self)
            else:
                return visitor.visitChildren(self)




    def condicao(self):

        localctx = DataFlowParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(DataFlowParser.IDENTIFICADOR)
            self.state = 99
            self.operador()
            self.state = 100
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataFlowParser.RULE_operador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperador" ):
                listener.enterOperador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperador" ):
                listener.exitOperador(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperador" ):
                return visitor.visitOperador(self)
            else:
                return visitor.visitChildren(self)




    def operador(self):

        localctx = DataFlowParser.OperadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_operador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 256000) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DataFlowParser.STRING, 0)

        def NUMERO(self):
            return self.getToken(DataFlowParser.NUMERO, 0)

        def BOOLEANO(self):
            return self.getToken(DataFlowParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return DataFlowParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)




    def valor(self):

        localctx = DataFlowParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240518168576) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoAgregacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataFlowParser.RULE_funcaoAgregacao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoAgregacao" ):
                listener.enterFuncaoAgregacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoAgregacao" ):
                listener.exitFuncaoAgregacao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncaoAgregacao" ):
                return visitor.visitFuncaoAgregacao(self)
            else:
                return visitor.visitChildren(self)




    def funcaoAgregacao(self):

        localctx = DataFlowParser.FuncaoAgregacaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcaoAgregacao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8126464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormatoSaidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataFlowParser.RULE_formatoSaida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormatoSaida" ):
                listener.enterFormatoSaida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormatoSaida" ):
                listener.exitFormatoSaida(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormatoSaida" ):
                return visitor.visitFormatoSaida(self)
            else:
                return visitor.visitChildren(self)




    def formatoSaida(self):

        localctx = DataFlowParser.FormatoSaidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_formatoSaida)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirecaoOrdenacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataFlowParser.RULE_direcaoOrdenacao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirecaoOrdenacao" ):
                listener.enterDirecaoOrdenacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirecaoOrdenacao" ):
                listener.exitDirecaoOrdenacao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirecaoOrdenacao" ):
                return visitor.visitDirecaoOrdenacao(self)
            else:
                return visitor.visitChildren(self)




    def direcaoOrdenacao(self):
